k8s/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecasting
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: forecasting-staging-ksa
      containers:
        - name: forecasting
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: forecasting-staging-secrets
